@@ -5,6 +5,7 @@ import json
 from resources.lib.ui import utils, client, control, get_meta, database
 from resources.lib.WatchlistFlavor.WatchlistFlavorBase import WatchlistFlavorBase
 from resources.lib.ui.divide_flavors import div_flavor
+from resources.lib.endpoints import simkl_calendar, anilist
 
 
 class AniListWLF(WatchlistFlavorBase):
@@ -292,6 +293,15 @@ class AniListWLF(WatchlistFlavorBase):
 
         next_up = progress + 1
         episode_count = res['episodes'] if res['episodes'] else 0
+
+        if not control.getBool('playlist.unaired'):
+            airing_episode = simkl_calendar.SimklCalendar().get_calendar_data(mal_id)
+            if not airing_episode:
+                airing_episode = anilist.Anilist().get_airing_calendar(mal_id)
+
+            if airing_episode:
+                episode_count = airing_episode
+
         base_title = res['title'].get(self.title_lang) or res['title'].get('userPreferred')
         title = f"{base_title} - {next_up}/{episode_count}"
         poster = image = res['coverImage']['extraLarge']
