@@ -41,6 +41,9 @@ completed_json = os.path.join(dataPath, 'completed.json')
 genre_json = os.path.join(dataPath, 'genres.json')
 sort_options_json = os.path.join(dataPath, 'sort_options.json')
 embeds_json = os.path.join(dataPath, 'embeds.json')
+simkl_calendar_json = os.path.join(dataPath, 'simkl_calendar.json')
+anilist_calendar_json = os.path.join(dataPath, 'anilist_calendar.json')
+mal_calendar_json = os.path.join(dataPath, 'mal_calendar.json')
 
 IMAGES_PATH = os.path.join(ADDON_PATH, 'resources', 'images')
 OTAKU_LOGO_PATH = os.path.join(ADDON_PATH, 'resources', 'images', 'trans-goku.png')
