@@ -1,3 +1,7 @@
+Changelog v5.1.63 (2024-02-11):
+- Added New Playback Setting for Playlist
+- Made Calendars loading Faster
+
 Changelog v5.1.62 (2024-02-10):
 - Added ability to change Anilist Posters to Mal Posters
 
